--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="br.edu.pdm.cityharm">
+    package="br.edu.pdm.cityharm">
 
     <uses-feature
         android:name="android.hardware.camera2"
-        android:required="true"/>
+        android:required="true" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -24,19 +24,15 @@
         android:theme="@style/AppTheme">
         <activity android:name=".SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity_">
-        </activity>
-        <activity android:name=".principal.PrincipalActivity_">
-        </activity>
-        <activity android:name=".cadastro.usuario.CadastroUsuarioActivity_">
-        </activity>
-        <activity android:name=".cadastro.problema.CadastroProblemaActivity_">
-        </activity>
+        <activity android:name=".LoginActivity_"></activity>
+        <activity android:name=".principal.PrincipalActivity_"></activity>
+        <activity android:name=".cadastro.usuario.CadastroUsuarioActivity_"></activity>
+        <activity android:name=".cadastro.problema.CadastroProblemaActivity_"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -47,12 +43,12 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
         <activity
             android:name=".mapa.MapaProblemasActivity_"
-            android:label="@string/title_activity_mapa_problemas">
-        </activity>
+            android:label="@string/title_activity_mapa_problemas"></activity>
+        <activity android:name=".about.SobreActivity_"></activity>
     </application>
 
 </manifest>
